<resources>
    <string name="app_name">Album Of The Day</string>
    <string name="main_user_name">User name</string>
    <string name="main_report_button">New album entry</string>
    <string name="main_stats_button">Stats</string>
    <string name="main_settings_button">Settings</string>
    <string name="main_listened_text">You haven\'t entered any entries yet!</string>
    <string name="main_listened_text_format">You last listened to \"%1$s\" by %2$s.</string>
    <string name="login_main_text">Because this app uses Google Sheets to record your data, we ask that you sign in using a Google account. If you do not have an account, please create one and try again.</string>
    <string name="login_button_text">Log in using my Google account</string>
    <string name="entry_artist_text">Artist:</string>
    <string name="entry_artist_hint">Led Zeppelin</string>
    <string name="entry_album_text">Album name:</string>
    <string name="entry_album_hint">Led Zeppelin II</string>
    <string name="entry_song_text">Favorite song:</string>
    <string name="entry_song_hint">Ramble On</string>
    <string name="entry_thoughts_text">Thoughts:</string>
    <string name="entry_thoughts_hint">What did you think of the album?</string>
    <string name="entry_oneword_text">One word description:</string>
    <string name="entry_oneword_hint">Crazy</string>
    <string name="entry_activity_text">Ideal activity:</string>
    <string name="entry_activity_hint">Running next to a vehicle</string>
    <string name="entry_takeaway_text">Takeaway:</string>
    <string name="entry_takeaway_hint">What did you take away from the album?</string>
    <string name="entry_source_text">Source:</string>
    <string name="entry_source_hint">Where did you hear about this album?</string>
    <string name="entry_title_text_1">Enter details on the album you listned to today!</string>
    <string name="entry_title_text_2">Album and artist names are required</string>
    <string name="button_submit">Submit</string>
    <string name="entry_back_title">Cancel entry?</string>
    <string name="entry_back_text">Are you sure you want to cancel your album entry?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
</resources>
