<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.canaday.loth.albumoftheday1.MainActivity">

    <TextView
        android:id="@+id/mainUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_user_name"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        app:layout_constraintLeft_toRightOf="@+id/mainUserPic"
        android:layout_marginLeft="32dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp" />

    <Space
        android:id="@+id/mainCenterSpace"
        android:layout_width="10dp"
        android:layout_height="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mainEntryButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="32dp"
        android:text="@string/main_report_button"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/mainCenterSpace"
        app:layout_constraintTop_toBottomOf="@+id/mainCenterSpace"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/mainStatsButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/main_stats_button"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/mainSettingsButton"
        app:layout_constraintLeft_toRightOf="@+id/mainCenterSpace"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainCenterSpace"
        app:layout_constraintVertical_bias="0.504" />

    <Button
        android:id="@+id/mainSettingsButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="8dp"
        android:text="@string/main_settings_button"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintLeft_toRightOf="@+id/mainCenterSpace"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainStatsButton" />

    <TextView
        android:id="@+id/mainListenedText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/main_listened_text"
        app:layout_constraintBottom_toTopOf="@+id/mainCenterSpace"
        app:layout_constraintLeft_toRightOf="@+id/mainLastAlbumArt"
        app:layout_constraintTop_toBottomOf="@+id/mainUserName"
        app:layout_constraintVertical_bias="0.503"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/mainLastAlbumArt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="32dp"
        android:scaleType="center"
        android:scaleX="1"
        android:scaleY="1"
        app:layout_constraintBottom_toTopOf="@+id/mainCenterSpace"
        app:layout_constraintLeft_toLeftOf="parent"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/mainUserName" />

    <ImageView
        android:id="@+id/mainUserPic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />
</android.support.constraint.ConstraintLayout>
